Update and rename acontent-detect.yaml to achecker-detect.yaml

--- a/technologies/achecker-detect.yaml
+++ b/technologies/achecker-detect.yaml
@@ -18,7 +18,9 @@ requests:
       - type: word
         part: body
         words:
-          - "AContent"
+          - ": Web Accessibility Checker</title>"
+          - "AChecker - Copyright"
+        condition: and
 
       - type: status
         status:
