--- a/technologies/achecker-detect.yaml
+++ b/technologies/achecker-detect.yaml
@@ -1,16 +1,15 @@
-id: acontent-detect
+id: achecker-detect
 
 info:
-  name: AContent Detect
-  author: pikpikcu
+  name: AChecker Detect
+  author: princechaddha
   severity: info
-  tags: tech,acontent
+  tags: tech,achecker
 
 requests:
   - method: GET
     path:
-      - "{{BaseURL}}/"
-      - "{{BaseURL}}/AContent/login.php"
+      - "{{BaseURL}}/checker/login.php"
 
     matchers-condition: and
     matchers:
