--- a/technologies/acontent-detect.yaml
+++ b/technologies/acontent-detect.yaml
@@ -10,15 +10,16 @@ requests:
   - method: GET
     path:
       - "{{BaseURL}}/"
-      - "{{BaseURL}}/AContent/login.php"
-
+    redirects: true
     matchers-condition: and
     matchers:
 
       - type: word
         part: body
         words:
-          - "AContent"
+          - "<title>AContent : Home</title>"
+          - "AContent - Copyright 2010 by IDRC/IDI http://inclusivedesign.ca/"
+        condition: or
 
       - type: status
         status:
