Update and rename wondercms-detect to wondercms-detect.yaml

--- a/technologies/wondercms-detect.yaml
+++ b/technologies/wondercms-detect.yaml
@@ -19,7 +19,7 @@ requests:
         words:
           - "Powered by WonderCMS"
           - "https://www.wondercms.com"
-
+        condition: and
       - type: status
         status:
           - 200
