--- a/technologies/bigbluebutton-detect.yaml
+++ b/technologies/bigbluebutton-detect.yaml
@@ -18,7 +18,7 @@ requests:
         part: body
         words:
           - "<title>BigBlueButton</title>"
-
+        condition: and
       - type: status
         status:
           - 200
