Update and rename phpCollab-detect.yaml to phpcollab-detect.yaml

--- a/technologies/phpcollab-detect.yaml
+++ b/technologies/phpcollab-detect.yaml
@@ -1,10 +1,10 @@
-id: phpCollab-detect
+id: phpcollab-detect
 
 info:
   name: PhpCollab detect
   author: pikpikcu
   severity: info
-  tags: tech,phpCollab
+  tags: tech,phpcollab
 
 requests:
   - method: GET
@@ -12,9 +12,9 @@ requests:
       - "{{BaseURL}}/general/login.php"
 
     matchers:
-      - type: regex
+      - type: word
         part: body
-        regex:
+        words:
           - '<title>PhpCollab</title>'
 
     extractors:
