--- a/vulnerabilities/other/bitrix-open-redirect.yaml
+++ b/vulnerabilities/other/bitrix-open-redirect.yaml
@@ -4,6 +4,7 @@ info:
   name: Bitrix Open URL redirect detection
   author: pikpikcu
   severity: low
+  reference: https://packetstormsecurity.com/files/151955/1C-Bitrix-Site-Management-Russia-2.0-Open-Redirection.html
   tags: redirect,bitrix
 
 requests:
