--- a/technologies/jenkins-detect.yaml
+++ b/technologies/jenkins-detect.yaml
@@ -4,6 +4,7 @@ info:
   name: Jenkins detect (version)
   author: philippdelteil
   severity: info
+  tags: tech,jenkins
 
 requests:
   - method: GET
@@ -16,8 +17,13 @@ requests:
           - "X-Jenkins"
         part: header
 
+      - type: word
+        words:
+          - "<title>Sign in [Jenkins]</title>"
+        part: body
+
     extractors:
       - type: kval
         part: header
         kval:
-          - X-Jenkins
+          - x_jenkins
