--- a/technologies/openx-detect.yaml
+++ b/technologies/openx-detect.yaml
@@ -17,6 +17,10 @@ requests:
         regex:
           - '<title>OpenX</title>'
 
+      - type: status
+        status:
+          - 200
+
     extractors:
       - type: regex
         part: body
