--- a/vulnerabilities/wordpress/wp-upload-data.yaml
+++ b/vulnerabilities/wordpress/wp-upload-data.yaml
@@ -10,12 +10,18 @@ requests:
   - method: GET
     path:
       - "{{BaseURL}}/wp-content/uploads/data.txt"
+
     matchers-condition: and
     matchers:
       - type: word
         words:
           - "admin"
-          - ""
+
+      - type: word
+        part: header
+        words:
+          - text/plain
+
       - type: status
         status:
           - 200
