--- a/misconfiguration/android-debug-database-exposed.yaml
+++ b/misconfiguration/android-debug-database-exposed.yaml
@@ -17,3 +17,7 @@ requests:
       - type: word
         words:
           - '<title>Android Debug Database</title>'
+
+      - type: status
+        status:
+          - 200
