--- a/exposed-panels/sgp-login-panel.yaml
+++ b/exposed-panels/sgp-login-panel.yaml
@@ -21,3 +21,10 @@ requests:
       - type: status
         status:
           - 200
+
+    extractors:
+      - type: regex
+        part: body
+        group: 1
+        regex:
+          - ">Ver\\. ([0-9.A-Z]+)</p>"
