--- a/exposed-panels/cisco-sendgrid.yaml
+++ b/exposed-panels/cisco-sendgrid.yaml
@@ -14,10 +14,17 @@ requests:
 
     matchers-condition: and
     matchers:
-      - type: word
-        words:
-          - '<title>Cisco ServiceGrid'
+      - type: regex
+        regex:
+          - '(?m)^<title>Cisco ServiceGrid (.*)<\/title>$'
 
       - type: status
         status:
           - 200
+
+    extractors:
+      - type: regex
+        part: body
+        group: 1
+        regex:
+          - '<div class="top\-margin">Version ([0-9.]+)<\/div>'
