--- a/exposed-panels/dell-openmanager-login.yaml
+++ b/exposed-panels/dell-openmanager-login.yaml
@@ -13,13 +13,14 @@ requests:
       - '{{BaseURL}}'
       - '{{BaseURL}}/config/authentication_page.htm'
 
-    matchers-condition: and
+    matchers-condition: or
     matchers:
       - type: word
         words:
           - '<title>Dell OpenManage Switch Administrator</title>'
-          - '<TITLE>Log In</TITLE>'
 
-      - type: status
-        status:
-          - 200
+      - type: word
+        words:
+          - '<TITLE>Log In</TITLE>'
+          - 'device/logOff_up_menu1.htm'
+        condition: and
