--- a/cerebro-page.yaml
+++ b/cerebro-page.yaml
@@ -10,10 +10,17 @@ info:
 requests:
   - method: GET
     path:
-      - "{{BaseURL}}/cerebro/"
+      - "{{BaseURL}}/login"
+
     matchers:
       - type: word
         words:
-          - "cerebro"
-        condition: and
+          - "<title>Cerebro</title>"
         part: body
+
+    extractors:
+      - type: regex
+        part: body
+        group: 1
+        regex:
+          - "<small>([a-z0-9.]+)</small>"
