Update and rename cerebro-page.yaml to exposed-panels/cerebro-panel.yaml

--- a/exposed-panels/cerebro-panel.yaml
+++ b/exposed-panels/cerebro-panel.yaml
@@ -1,11 +1,11 @@
-id: cerebro-page 
+id: cerebro-panel 
 
 info:
-  name: cerebro Unauth
+  name: Cerebro Panel
   author: elder tao
   severity: high
   reference: https://github.com/lmenezes/cerebro
-  tags: config,exposure
+  tags: panel,cerebro
 
 requests:
   - method: GET
