--- a/technologies/getsimple-cms-detector.yaml
+++ b/technologies/getsimple-cms-detector.yaml
@@ -3,7 +3,7 @@ info:
   author: philippedelteil
   severity: info
   description: With this template we can detect a running GetSimple CMS instance
-  tags: getsimple
+  tags: getsimple,tech
 requests:
   - method: GET
     path:
