--- a/exposed-panels/cerebro-panel.yaml
+++ b/exposed-panels/cerebro-panel.yaml
@@ -2,7 +2,7 @@ id: cerebro-panel
 
 info:
   name: Cerebro Panel
-  author: elder tao
+  author: huowuzhao,elder tao
   severity: high
   reference: https://github.com/lmenezes/cerebro
   tags: panel,cerebro
