--- a/misconfiguration/zabbix-dashboards-access.yaml
+++ b/misconfiguration/zabbix-dashboards-access.yaml
@@ -1,4 +1,5 @@
 id: zabbix-dashboards-access
+
 info:
   name: zabbix-dashboards-access
   author: pussycat0x
@@ -6,15 +7,20 @@ info:
   description: View dashboard with guest login.
   reference: https://www.exploit-db.com/ghdb/5595
   tags: zabbix,unauth
+
 requests:
   - method: GET
     path:
       - "{{BaseURL}}/zabbix/zabbix.php?action=dashboard.list"
+
     matchers-condition: and
     matchers:
       - type: word
         words:
-          - "Dashboards"
+          - "Create dashboard"
+          - "Zabbix SIA"
+        condition: and
+
       - type: status
         status:
           - 200
