--- a/vulnerabilities/wordpress/wp-upload-data.yaml
+++ b/vulnerabilities/wordpress/wp-upload-data.yaml
@@ -1,4 +1,5 @@
 id: wordpress-upload-data
+
 info:
   name: wordpress-upload-data
   author: pussycat0x
@@ -6,6 +7,7 @@ info:
   description: Searches for Passwords  in the wordpress uploads directory.
   reference: https://www.exploit-db.com/ghdb/7040
   tags: wordpress,listing
+
 requests:
   - method: GET
     path:
@@ -15,12 +17,12 @@ requests:
     matchers:
       - type: word
         words:
-          - "admin"
+          - "admin:"
 
       - type: word
         part: header
         words:
-          - text/plain
+          - "text/plain"
 
       - type: status
         status:
