--- a/exposures/files/github-page-config.yaml
+++ b/exposures/files/github-page-config.yaml
@@ -1,3 +1,4 @@
+
 id: github-page-config
 
 info:
@@ -5,6 +6,7 @@ info:
   author: hahwul
   severity: info
   description: Find github pages config file.
+  tags: github,exposure
 
 requests:
   - method: GET
