--- a/exposures/files/github-gemfile-files.yaml
+++ b/exposures/files/github-gemfile-files.yaml
@@ -5,6 +5,7 @@ info:
   author: hahwul
   severity: info
   description: Find github page files(Gemfile / Gemfile.lock)
+  tags: github,exposure
 
 requests:
   - method: GET
