--- a/technologies/guacamole-login-version-detect.yaml
+++ b/technologies/guacamole-login-version-detect.yaml
@@ -1,16 +1,15 @@
-id: Apache-Guacamole-version-detect
+id: apache-guacamole
 
 info:
-  name: Apache Guacamole Login Page and version Detected
+  name: Apache Guacamole Login Page and version detection
   author: r3dg33k
-  severity: Info
-  tags: apache,guacamole
+  severity: info
+  tags: apache,guacamole,tech
 
 requests: 
   - method: GET
     path:
       - "{{BaseURL}}/translations/en.json"
-      - "{{BaseURL}}:8080/translations/en.json"
 
     matchers-condition: and
     matchers:
