--- a/exposures/tokens/generic/general-tokens.yaml
+++ b/exposures/tokens/generic/general-tokens.yaml
@@ -27,6 +27,7 @@ requests:
         regex:
           - '(?i)key(up|down|press|boardnavigation)'
           - '(?i)password(emailnotfoundmessage|label|errormessage|message)'
+          - '(?i)keys_(close|previous|next|zoom|play_pause)'
         condition: or
         negative: true
 
