--- a/vulnerabilities/jenkins/jenkins-script.yaml
+++ b/vulnerabilities/jenkins/jenkins-script.yaml
@@ -5,7 +5,7 @@ info:
   author: philippedelteil
   severity: critical
   reference: https://hackerone.com/reports/403402
-  tags: jenkins,rce
+  tags: jenkins,rce,devops
 requests:
   - method: GET
     path:
@@ -15,6 +15,8 @@ requests:
       - type: word
         words:
           - "println(Jenkins.instance.pluginManager.plugins)"
+          - "Scriptconsole"
+        condition: and
         part: body
       - type: status
         status:
