--- a/file/xss/dom-xss.yaml
+++ b/file/xss/dom-xss.yaml
@@ -6,7 +6,7 @@ info:
   # The existence of a sink or source does not by itself indicate a vulnerability. Due diligence must be performed on the results before opening a bug report.
   author: geeknik
   severity: info
-  tags: dom,xss,file
+  tags: xss,file
 
 file:
   - extensions:
