--- a/exposures/tokens/generic/general-tokens.yaml
+++ b/exposures/tokens/generic/general-tokens.yaml
@@ -28,6 +28,7 @@ requests:
           - '(?i)key(up|down|press|boardnavigation)'
           - '(?i)password(emailnotfoundmessage|label|errormessage|message)'
           - '(?i)keys_(close|previous|next|zoom|play_pause)'
+          - '(?i)password(lessauth|requirementsashtmllist)'
         condition: or
         negative: true
 
