--- a/exposures/tokens/generic/general-tokens.yaml
+++ b/exposures/tokens/generic/general-tokens.yaml
@@ -26,9 +26,8 @@ requests:
         part: body
         regex:
           - '(?i)key(up|down|press|boardnavigation)'
-          - '(?i)password(emailnotfoundmessage|label|errormessage|message)'
+          - '(?i)password(lessauth|requirementsashtmllist|emailnotfoundmessage|label|errormessage|message)'
           - '(?i)keys_(close|previous|next|zoom|play_pause)'
-          - '(?i)password(lessauth|requirementsashtmllist)'
         condition: or
         negative: true
 
