--- a/technologies/opensis-detect.yaml
+++ b/technologies/opensis-detect.yaml
@@ -9,12 +9,11 @@ info:
 requests:
   - method: GET
     path:
-      - "{{BaseURL}}/"
+      - "{{BaseURL}}"
       - "{{BaseURL}}/opensis/index.php"
 
     matchers-condition: and
     matchers:
-
       - type: word
         part: body
         words:
