--- a/vulnerabilities/other/bems-api-lfi.yaml
+++ b/vulnerabilities/other/bems-api-lfi.yaml
@@ -1,4 +1,4 @@
-id: longjing-technology-bems-api-lfi
+id: bems-api-lfi
 
 info:
   name: Longjing Technology BEMS API 1.21 - Remote Arbitrary File Download
@@ -6,7 +6,7 @@ info:
   severity: high
   description: The application suffers from an unauthenticated arbitrary file download vulnerability. Input passed through the fileName parameter through downloads endpoint is not properly verified before being used to download files. This can be exploited to disclose the contents of arbitrary and sensitive files through directory traversal attacks.
   reference: https://www.zeroscience.mk/en/vulnerabilities/ZSL-2021-5657.php
-  tags: longjing-technology-bems-api,lfi
+  tags: lfi
 
 requests:
   - method: GET
