--- a/dns/can-i-take-over-dns.yaml
+++ b/dns/can-i-take-over-dns.yaml
@@ -1,10 +1,10 @@
-id: nameserver-detection
+id: can-i-take-over-dns
 
 info:
-  name: NS Detection
+  name: Can I Take Over DNS - Fingerprint
   author: pdteam
   severity: info
-  tags: dns,ns
+  tags: dns,ns,takeover
   reference: https://github.com/indianajson/can-i-take-over-dns
 
 dns:
