--- a/technologies/favicon-detection.yaml
+++ b/technologies/favicon-detection.yaml
@@ -2554,3 +2554,8 @@ requests:
         name: "KevinLAB"
         dsl:
           - "status_code==200 && (\"-1650202746\" == mmh3(base64_py(body)))"
+
+      - type: dsl
+        name: "qdPM"
+        dsl:
+          - "status_code==200 && (\"762074255\" == mmh3(base64_py(body)))"
