--- a/fuzzing/prestashop-module-fuzz.yaml
+++ b/fuzzing/prestashop-module-fuzz.yaml
@@ -26,6 +26,14 @@ requests:
       - type: word
         words:
           - "<module>"
+          - "<name>"
+          - "<displayName>"
+          - "</module>"
+        condition: and
+
+      - type: status
+        status:
+          - 200
 
     extractors:
       - type: regex
