--- a/fuzzing/prestashop-module-fuzz.yaml
+++ b/fuzzing/prestashop-module-fuzz.yaml
@@ -1,6 +1,6 @@
 id: prestashop-module-fuzz
 info:
-  name: Prestashop Modules Fuzz
+  name: Prestashop Modules Enumeration
   author: meme-lord
   severity: info
   tags: fuzz,prestashop
@@ -28,6 +28,7 @@ requests:
           - "<module>"
           - "<name>"
           - "<displayName>"
+          - "<is_configurable>"
           - "</module>"
         condition: and
 
