--- a/misconfiguration/springboot/springboot-metrics.yaml
+++ b/misconfiguration/springboot/springboot-metrics.yaml
@@ -1,6 +1,6 @@
-id: springboot-health
+id: springboot-metrics
 info:
-  name: Detect Springboot Health Actuator
+  name: Detect Springboot metrics Actuator
   author: pussycat0x
   severity: low
   description: Additional routes may be displayed
