--- a/misconfiguration/office365-open-redirect.yaml
+++ b/misconfiguration/office365-open-redirect.yaml
@@ -5,16 +5,20 @@ info:
   author: dhiyaneshDk
   severity: low
   reference: https://medium.com/@heinjame/office365-open-redirect-from-autodiscover-64284d26c168
-  tags: redirect
+  tags: redirect,office365,microsoft
 
 requests:
   - method: GET
     path:
-      - "{{BaseURL}}/autodiscover/autodiscover.json/v1.0/anyname@attacker.com?Protocol=Autodiscoverv1"
+      - "{{BaseURL}}/autodiscover/autodiscover.json/v1.0/{{randstr}}@interact.sh?Protocol=Autodiscoverv1"
 
-    redirects: true
-    max-redirects: 2
+    matchers-condition: and
     matchers:
       - type: word
+        part: header
         words:
-          - "Attacker"
+          - "https://autodiscover.interact.sh"
+
+      - type: status
+        status:
+          - 302
