--- a/misconfiguration/office365-open-redirect.yaml
+++ b/misconfiguration/office365-open-redirect.yaml
@@ -17,7 +17,7 @@ requests:
       - type: word
         part: header
         words:
-          - "https://autodiscover.interact.sh"
+          - "autodiscover.interact.sh"
 
       - type: status
         status:
