--- a/misconfiguration/springboot/springboot-autoconfig.yaml
+++ b/misconfiguration/springboot/springboot-autoconfig.yaml
@@ -1,15 +1,18 @@
 id: springboot-autoconfig
+
 info:
   name: Detect Springboot autoconfig Actuator
   author: pussycat0x
   severity: low
   description: Displays an auto-configuration report showing all auto-configuration candidates and the reason why they 'were' or 'were not' applied.
-  tags: springboot,disclosure
+  tags: springboot,exposure
+
 requests:
   - method: GET
     path:
       - "{{BaseURL}}/autoconfig"
       - "{{BaseURL}}/actuator/autoconfig"
+
     matchers-condition: and
     matchers:
       - type: word
@@ -18,15 +21,8 @@ requests:
           - "positiveMatches"
           - "AuditAutoConfiguration#auditListener"
           - "EndpointAutoConfiguration#beansEndpoint"
-          - "condition"
         condition: and
+
       - type: status
         status:
           - 200
-      - type: word
-        words:
-          - "application/json"
-          - "application/vnd.spring-boot.actuator"
-          - "application/vnd.spring-boot.actuator.v1+json"
-        condition: or
-        part: header
