--- a/misconfiguration/springboot/springboot-dump.yaml
+++ b/misconfiguration/springboot/springboot-dump.yaml
@@ -1,15 +1,18 @@
 id: springboot-dump
+
 info:
   name: Detect Springboot Dump Actuator
   author: pussycat0x
   severity: low
   description: Performs a thread dump
-  tags: springboot,disclosure
+  tags: springboot,exposure
+
 requests:
   - method: GET
     path:
       - "{{BaseURL}}/dump"
       - "{{BaseURL}}/actuator/dump"
+
     matchers-condition: and
     matchers:
       - type: word
@@ -22,13 +25,7 @@ requests:
           - "stackTrace"
           - "methodName"
         condition: and
+
       - type: status
         status:
           - 200
-      - type: word
-        words:
-          - "application/json"
-          - "application/vnd.spring-boot.actuator"
-          - "application/vnd.spring-boot.actuator.v1+json"
-        condition: or
-        part: header
