--- a/misconfiguration/springboot/springboot-health.yaml
+++ b/misconfiguration/springboot/springboot-health.yaml
@@ -1,15 +1,18 @@
 id: springboot-health
+
 info:
   name: Detect Springboot Health Actuator
   author: pussycat0x
   severity: info
   description: Additional routes may be displayed
-  tags: springboot,disclosure
+  tags: springboot,exposure
+
 requests:
   - method: GET
     path:
       - "{{BaseURL}}/health"
       - "{{BaseURL}}/actuator/health"
+
     matchers-condition: and
     matchers:
       - type: word
@@ -19,13 +22,7 @@ requests:
           - '"diskSpace"'
           - '"jms"'
         condition: and
+
       - type: status
         status:
           - 200
-      - type: word
-        words:
-          - "application/json"
-          - "application/vnd.spring-boot.actuator"
-          - "application/vnd.spring-boot.actuator.v1+json"
-        condition: or
-        part: header
