--- a/misconfiguration/springboot/springboot-metrics.yaml
+++ b/misconfiguration/springboot/springboot-metrics.yaml
@@ -1,15 +1,18 @@
 id: springboot-metrics
+
 info:
   name: Detect Springboot metrics Actuator
   author: pussycat0x
   severity: low
   description: Additional routes may be displayed
-  tags: springboot,disclosure
+  tags: springboot,exposure
+
 requests:
   - method: GET
     path:
       - "{{BaseURL}}/metrics"
       - "{{BaseURL}}/actuator/metrics"
+
     matchers-condition: and
     matchers:
       - type: word
@@ -23,13 +26,7 @@ requests:
           - "nonheap.init"
           - "heap.committed"
         condition: and
+
       - type: status
         status:
           - 200
-      - type: word
-        words:
-          - "application/json"
-          - "application/vnd.spring-boot.actuator"
-          - "application/vnd.spring-boot.actuator.v1+json"
-        condition: or
-        part: header
