--- a/vulnerabilities/other/sap-redirect.yaml
+++ b/vulnerabilities/other/sap-redirect.yaml
@@ -4,7 +4,7 @@ info:
   name: SAP wide open redirect
   author: Gal Nagli
   severity: medium
-  tags: redirect
+  tags: redirect,sap
 
 
 requests:
@@ -15,9 +15,11 @@ requests:
 
     matchers-condition: and
     matchers:
+
       - type: status
         status:
           - 302
+
       - type: word
         words:
           - "Location: https://www.example.com"
