--- a/vulnerabilities/other/kevinlab-hems-backdoor.yaml
+++ b/vulnerabilities/other/kevinlab-hems-backdoor.yaml
@@ -34,3 +34,8 @@ requests:
         words:
           - '<script> alert'
         negative: true
+
+      - type: word
+        words:
+          - 'PHPSESSID'
+        part: header
