--- a/vulnerabilities/other/kevinlab-hems-backdoor.yaml
+++ b/vulnerabilities/other/kevinlab-hems-backdoor.yaml
@@ -6,7 +6,7 @@ info:
   severity: critical
   description: The HEMS solution has an undocumented backdoor account and these sets of credentials are never exposed to the end-user and cannot be changed through any normal operation of the solution thru the RMI. Attacker could exploit this vulnerability by logging in using the backdoor account with highest privileges for administration and gain full system control. The backdoor user cannot be seen in the users settings in the admin panel and it also uses an undocumented privilege level (admin_pk=1) which allows full availability of the features that the HEMS is offering remotely.
   reference: https://www.zeroscience.mk/en/vulnerabilities/ZSL-2021-5654.php
-  tags: kevinlab
+  tags: kevinlab,default-login,backdoor
 
 requests:
   - raw:
