--- a/exposures/configs/laravel-env.yaml
+++ b/exposures/configs/laravel-env.yaml
@@ -6,7 +6,7 @@ info:
   severity: critical
   description: Laravel uses the .env file to store sensitive information like database credentials and tokens. It should not be publicly accessible.
   reference: https://laravel.com/docs/master/configuration#environment-configuration
-  tags: config,exposure
+  tags: config,exposure,laravel
 
 requests:
   - method: GET
@@ -17,13 +17,21 @@ requests:
       - "{{BaseURL}}/.env.prod.local"
       - "{{BaseURL}}/.env.production.local"
       - "{{BaseURL}}/.env.local"
+      - "{{BaseURL}}/.env.example"
       - "{{BaseURL}}/.env.stage"
       - "{{BaseURL}}/.env.live"
+      - "{{BaseURL}}/.env.old"
+      - "{{BaseURL}}/.env_1"
+      - "{{BaseURL}}/.env_sample"
+
     matchers-condition: and
     matchers:
       - type: regex
         regex:
-          - "(?m)^APP_(NAME|ENV|KEY|DEBUG|URL)="
+          - "(?m)^APP_(NAME|ENV|KEY|DEBUG|URL|PASSWORD)="
+          - "(?m)^DB_(HOST|PASSWORD|DATABASE)="
+        condition: or
+
       - type: status
         status:
           - 200
