Additional optional matcher

--- a/exposures/configs/codeigniter-env.yaml
+++ b/exposures/configs/codeigniter-env.yaml
@@ -20,11 +20,15 @@ requests:
       - "{{BaseURL}}/.env_1"
       - "{{BaseURL}}/.env.old"
       - "{{BaseURL}}/.env_sample"
+
     matchers-condition: and
     matchers:
       - type: regex
         regex:
-          - "(NAME|ENV|KEY|DEBUG|URL|PASSWORD)"
+          - "(?m)^APP_(NAME|ENV|KEY|DEBUG|URL|PASSWORD)"
+          - "(?m)^DB_(HOST|PASSWORD|DATABASE)"
+        condition: or
+
       - type: status
         status:
           - 200
