--- a/vulnerabilities/wordpress/wp-prostore-open-redirect.yaml
+++ b/vulnerabilities/wordpress/wp-prostore-open-redirect.yaml
@@ -1,4 +1,4 @@
-id: prostore-open-redirect
+id: wp-prostore-open-redirect
 
 info:
   name: WordPress ProStore Themes 1.1.2 Open Redirection
@@ -6,7 +6,7 @@ info:
   description: The prostore WordPress theme was affected by an Open Redirection security vulnerability.
   reference: https://wpscan.com/vulnerability/2e0f8b7f-96eb-443c-a553-550e42ec67dc
   severity: low
-  tags: wp,wordpress,themes,redirect
+  tags: wordpress,wp-theme,redirect
 
 requests:
   - method: GET
