--- a/vulnerabilities/wordpress/wp-grimag-open-redirect.yaml
+++ b/vulnerabilities/wordpress/wp-grimag-open-redirect.yaml
@@ -1,4 +1,4 @@
-id: grimag-open-redirect
+id: wp-grimag-open-redirect
 
 info:
   name: WordPress Grimag Themes < 1.1.1 Open Redirection
@@ -6,7 +6,7 @@ info:
   description: The Grimag WordPress theme was affected by an Open Redirection security vulnerability.
   reference: https://wpscan.com/vulnerability/db319d4c-7de6-4d36-90e9-86de82e9c03a
   severity: low
-  tags: wp,wordpress,themes,redirect
+  tags: wordpress,wp-theme,redirect
 
 requests:
   - method: GET
