--- a/technologies/apache-detect.yaml
+++ b/technologies/apache-detect.yaml
@@ -1,6 +1,6 @@
-id: apache-version-detect
+id: apache-detect
 info:
-  name: Apache Version
+  name: Apache Detection
   author: philippedelteil
   description: Some Apache servers have the version on the response header. The OpenSSL version can be also obtained
   severity: info
@@ -8,6 +8,7 @@ requests:
   - method: GET
     path:
       - "{{BaseURL}}"
+
     matchers-condition: and
     matchers:
 
