--- a/technologies/apache-detect.yaml
+++ b/technologies/apache-detect.yaml
@@ -4,6 +4,8 @@ info:
   author: philippedelteil
   description: Some Apache servers have the version on the response header. The OpenSSL version can be also obtained
   severity: info
+  tags: tech,apache
+
 requests:
   - method: GET
     path:
