--- a/default-logins/guacamole/guacamole-default-login.yaml
+++ b/default-logins/guacamole/guacamole-default-login.yaml
@@ -1,20 +1,17 @@
-id: guacamole-default-admin
+id: guacamole-default-credentials
 
 info:
   name: Guacamole Default Credentials
   author: r3dg33k
   severity: high
   tags: guacamole,default-login
-
-  # References:
-  # - https://wiki.debian.org/Guacamole#:~:text=You%20can%20now%20access%20the,password%20are%20both%20%22guacadmin%22.
+  reference: https://wiki.debian.org/Guacamole#:~:text=You%20can%20now%20access%20the,password%20are%20both%20%22guacadmin%22.
 
 requests:
   - raw:
       - |
         POST /api/tokens HTTP/1.1
         Host: {{Hostname}}
-        User-Agent: Mozilla/5.0 (X11; Linux x86_64; rv:78.0) Gecko/20100101 Firefox/78.0
         Content-Type: application/x-www-form-urlencoded
         Origin: {{Hostname}}
         Referer: {{Hostname}}
@@ -25,7 +22,14 @@ requests:
     matchers:
       - type: word
         words:
-          - '"username":"guacadmin",'
+          - '"username"'
+          - '"authToken"'
+          - '"guacadmin"'
+        condition: and
+
+      - type: word
+        words:
+          - 'application/json'
 
       - type: status
         status:
