--- a/exposures/configs/laravel-env.yaml
+++ b/exposures/configs/laravel-env.yaml
@@ -2,7 +2,7 @@ id: laravel-env
 
 info:
   name: Laravel .env file
-  author: pxmme1337 & dwisiswant0 & geeknik & emenalf
+  author: pxmme1337 & dwisiswant0 & geeknik & emenalf & adrianmf
   severity: medium
 
 requests:
@@ -17,6 +17,8 @@ requests:
       - "{{BaseURL}}/.env.example"
       - "{{BaseURL}}/.env.stage"
       - "{{BaseURL}}/.env.live"
+      - "{{BaseURL}}/.env.backup"
+      - "{{BaseURL}}/.env.save"
     matchers-condition: and
     matchers:
       - type: regex
