--- a/vulnerabilities/other/resin-inputfile-fileread.yaml
+++ b/vulnerabilities/other/resin-inputfile-fileread.yaml
@@ -3,6 +3,7 @@ info:
   name: Caucho Resin LFR
   author: princechaddha
   severity: high
+  description: A vulnerability in Caucho Resin allows remote unauthenticated users to utilize the 'inputFile' variable to include the content of locally stored files and disclose their content.
   tags: resin,caucho,lfr
 
 requests:
