--- a/vulnerabilities/other/resin-inputfile-fileread.yaml
+++ b/vulnerabilities/other/resin-inputfile-fileread.yaml
@@ -5,6 +5,7 @@ info:
   severity: high
   description: A vulnerability in Caucho Resin allows remote unauthenticated users to utilize the 'inputFile' variable to include the content of locally stored files and disclose their content.
   tags: resin,caucho,lfr
+  reference: https://blkstone.github.io/2017/10/30/resin-attack-vectors/
 
 requests:
   - method: GET
