--- a/.github/workflows/templates-stats.yml
+++ b/.github/workflows/templates-stats.yml
@@ -25,7 +25,7 @@ jobs:
         env:
           GO111MODULE: on
         run: |
-          go get -v github.com/projectdiscovery/templates-stats
+          go get -v github.com/projectdiscovery/templates-stats@main
         shell: bash
 
       - name: Markdown Stats
