--- a/exposures/files/iceflow-vpn-disclosure.yaml
+++ b/exposures/files/iceflow-vpn-disclosure.yaml
@@ -4,7 +4,7 @@ info:
   name: ICEFlow VPN Disclosure
   author: pikpikcu
   severity: medium
-  tags: exposure,files
+  tags: exposure,files,iceflow
 
 requests:
   - method: GET
