--- a/default-logins/azkaban/azkaban-web-client-defaulr-creds.yaml
+++ b/default-logins/azkaban/azkaban-web-client-defaulr-creds.yaml
@@ -1,10 +1,12 @@
 id: azkaban-web-client-default-creds
+
 info:
   name: Azkaban Web Client Default Credential
   author: pussycat0x
   severity: high
   reference: https://www.shodan.io/search?query=http.title%3A%22Azkaban+Web+Client%22
-  tags: default
+  tags: default-login,azkaban
+
 requests:
   - raw:
       - |
@@ -18,12 +20,14 @@ requests:
         X-Requested-With: XMLHttpRequest
 
         action=login&username=admin&password=admin
+
     matchers-condition: and
     matchers:
       - type: word
         words:
           - 'Set-Cookie: azkaban.browse'
-        part: header 
+        part: header
+
       - type: status
         status:
           - 200
