--- a/default-logins/azkaban/azkaban-web-client-defaulr-creds.yaml
+++ b/default-logins/azkaban/azkaban-web-client-defaulr-creds.yaml
@@ -25,9 +25,22 @@ requests:
     matchers:
       - type: word
         words:
-          - 'Set-Cookie: azkaban.browse'
+          - '"session.id"'
+          - '"success"'
+        condition: and
+
+      - type: word
+        words:
+          - 'azkaban.browser.session.id'
+          - 'application/json'
+        condition: and
         part: header
 
       - type: status
         status:
           - 200
+
+    extractors:
+      - type: kval
+        kval:
+          - azkaban.browser.session.id
