--- a/vulnerabilities/generic/basic-cors.yaml
+++ b/vulnerabilities/generic/basic-cors.yaml
@@ -4,7 +4,7 @@ info:
   name: Basic CORS misconfiguration
   author: nadino
   severity: info
-  tags: cors
+  tags: cors,generic
 
 requests:
   - method: GET
