--- a/vulnerabilities/generic/generic-linux-lfi.yaml
+++ b/vulnerabilities/generic/generic-linux-lfi.yaml
@@ -5,7 +5,7 @@ info:
   author: geeknik,unstabl3,pentest_swissky,sushantkamble
   severity: high
   description: Searches for /etc/passwd on passed URLs
-  tags: linux,lfi
+  tags: linux,lfi,generic
 
 requests:
   - method: GET
