--- a/vulnerabilities/generic/generic-windows-lfi.yaml
+++ b/vulnerabilities/generic/generic-windows-lfi.yaml
@@ -5,7 +5,7 @@ info:
   author: mesaglio,sushantkamble
   severity: high
   description: Searches for /windows/win.ini on passed URLs
-  tags: azure,windows,lfi
+  tags: azure,windows,lfi,generic
 
 requests:
   - method: GET
