--- a/vulnerabilities/generic/basic-cors.yaml
+++ b/vulnerabilities/generic/basic-cors.yaml
@@ -2,7 +2,7 @@ id: basic-cors-misconfig
 
 info:
   name: Basic CORS misconfiguration
-  author: nadino
+  author: nadino,G4L1T0,convisoappsec
   severity: info
   tags: cors
 
@@ -13,6 +13,7 @@ requests:
     headers:
       Origin: https://evil.com
 
+    matchers-condition: or
     matchers:
       - type: word
         words:
@@ -20,3 +21,8 @@ requests:
           - "Access-Control-Allow-Credentials: true"
         condition: and
         part: header
+
+      - type: word
+        part: header
+        words:
+          - "Access-Control-Allow-Origin: *"
