--- a/vulnerabilities/generic/basic-cors.yaml
+++ b/vulnerabilities/generic/basic-cors.yaml
@@ -4,7 +4,8 @@ info:
   name: Basic CORS misconfiguration
   author: nadino,G4L1T0,convisoappsec
   severity: info
-  tags: cors
+  reference: https://portswigger.net/web-security/cors
+  tags: cors,generic
 
 requests:
   - method: GET
