--- a/miscellaneous/missing-hsts.yaml
+++ b/miscellaneous/missing-hsts.yaml
@@ -4,7 +4,7 @@ info:
   author: Dawid Czarnecki
   severity: info
   description: Checks if the HSTS is enabled by looking for Strict Transport Security response header.
-  tags: misc
+  tags: misc,generic
 
 requests:
   - method: GET
