--- a/miscellaneous/missing-x-frame-options.yaml
+++ b/miscellaneous/missing-x-frame-options.yaml
@@ -4,7 +4,7 @@ info:
   name: Clickjacking (Missing XFO header)
   author: kurohost
   severity: low
-  tags: misc
+  tags: misc,generic
 
 requests:
   - method: GET
