--- a/exposed-panels/hp-service-manager.yaml
+++ b/exposed-panels/hp-service-manager.yaml
@@ -11,12 +11,13 @@ requests:
   - method: GET
     path:
       - '{{BaseURL}}/sm935/index.do'
+      - '{{BaseURL}}/sm/ess.do'
 
     matchers-condition: and
     matchers:
-      - type: word
-        words:
-          - '<title>HP Service Manager: Login</title>'
+      - type: regex
+        regex:
+          - '(?m)<title>HP Service Manager(.*)<\/title>'
       - type: status
         status:
           - 200
