--- a/exposed-panels/nginx-proxy-manager.yaml
+++ b/exposed-panels/nginx-proxy-manager.yaml
@@ -20,3 +20,9 @@ requests:
       - type: status
         status:
           - 200
+    extractors:
+      - type: regex
+        part: body
+        group: 1
+        regex:
+          - '"page" id="login" data\-version="([0-9.]+)">'
