--- a/exposed-panels/bazarr-login.yaml
+++ b/exposed-panels/bazarr-login.yaml
@@ -15,7 +15,6 @@ requests:
         Connection: keep-alive
         Accept: application/json, text/plain, */*
         User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/92.0.4515.131 Safari/537.36
-        X-API-KEY: 20f29876d89bcf390ab9988f9a5f0ecc
         Sec-GPC: 1
         Referer: {{BaseURL}}/system/status
         Accept-Encoding: gzip, deflate
@@ -33,20 +32,20 @@ requests:
         Accept-Encoding: gzip, deflate
         Accept-Language: en-US,en;q=0.9
 
-    matchers-condition: and
+    matchers-condition: or
     matchers:
       - type: word
         words:
-          - '"data"'
           - '"bazarr_config_directory"'
           - '"bazarr_directory"'
           - '"bazarr_version"'
-          - '"operating_system"'
-          - '<title>Bazarr</title>'
+        condition: and
 
-      - type: status
-        status:
-          - 200
+      - type: word
+        words:
+          - '<title>Bazarr</title>'
+          - 'Bazarr is a companion application to Sonarr and Radarr'
+        condition: and
 
     extractors:
       - type: regex
