--- a/vulnerabilities/other/ewebs-arbitrary-file-reading.yaml
+++ b/vulnerabilities/other/ewebs-arbitrary-file-reading.yaml
@@ -21,9 +21,10 @@ requests:
       - type: word
         words:
           - "[Edition]"
-          - "LocalInfo"
+          - "[LocalInfo]"
         condition: and
         part: body
+
       - type: status
         status:
           - 200
