--- a/exposures/tokens/generic/general-tokens.yaml
+++ b/exposures/tokens/generic/general-tokens.yaml
@@ -26,7 +26,7 @@ requests:
         part: body
         regex:
           - '(?i)key(up|down|press|boardnavigation)'
-          - '(?i)password(lessauth|requirementsashtmllist|emailnotfoundmessage|label|errormessage|message)'
+          - '(?i)password(lessauth|requirementsashtmllist|emailnotfoundmessage|label|errormessage|message|_checkemail_title|_newfield_retype|_text_new|login_submit|_has_expired_title|_has_expired_text)'
           - '(?i)keys_(close|previous|next|zoom|play_pause)'
         condition: or
         negative: true
