--- a/exposed-panels/bazarr-login.yaml
+++ b/exposed-panels/bazarr-login.yaml
@@ -10,15 +10,13 @@ info:
 requests:
   - raw:
       - |
-        GET /api/system/status HTTP/1.1
+        GET /system/status HTTP/1.1
         Host: {{BaseURL}}
         Connection: keep-alive
-        Accept: application/json, text/plain, */*
-        User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/92.0.4515.131 Safari/537.36
-        Sec-GPC: 1
-        Referer: {{BaseURL}}/system/status
-        Accept-Encoding: gzip, deflate
-        Accept-Language: en-US,en;q=0.9
+        Cache-Control: max-age=0
+        Upgrade-Insecure-Requests: 1
+        User-Agent: Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/90.0.4430.212 Safari/537.36
+        Accept: text/html,application/xhtml+xml,application/xml;q=0.9,image/avif,image/webp,im
 
       - |
         GET /login HTTP/1.1
@@ -32,24 +30,9 @@ requests:
         Accept-Encoding: gzip, deflate
         Accept-Language: en-US,en;q=0.9
 
-    matchers-condition: or
+    matchers-condition: and
     matchers:
-      - type: word
-        words:
-          - '"bazarr_config_directory"'
-          - '"bazarr_directory"'
-          - '"bazarr_version"'
-        condition: and
-
       - type: word
         words:
           - '<title>Bazarr</title>'
           - 'Bazarr is a companion application to Sonarr and Radarr'
-        condition: and
-
-    extractors:
-      - type: regex
-        part: body
-        regex:
-          - '"bazarr_version":\s"\d\.[0-9]+\.[0-9]+"'
-          - '"operating_system":\s"[^"]*"'
