Fixed crossdomain-xml template

--- a/exposures/files/crossdomin-xml.yaml
+++ b/exposures/files/crossdomin-xml.yaml
@@ -3,7 +3,7 @@ id: insecure-crossdomain
 info:
   name: Insecure cross-domain.xml file 
   author: Borna Nematzadeh
-  severity: medium
+  severity: info
   reference: https://www.acunetix.com/vulnerabilities/web/insecure-crossdomain-xml-file 
   tags: exposure
   
