--- a/exposures/files/iceflow-vpn-disclosure.yaml
+++ b/exposures/files/iceflow-vpn-disclosure.yaml
@@ -3,7 +3,7 @@ id: iceflow-vpn-disclosure
 info:
   name: ICEFlow VPN Disclosure
   author: pikpikcu
-  severity: medium
+  severity: info
   tags: exposure,files,iceflow
 
 requests:
@@ -26,7 +26,15 @@ requests:
           - 'ICEFLOW SYSTEM'
           - 'ICEFLOW'
         part: body
+        condition: or
 
       - type: status
         status:
           - 200
+
+      - type: word
+        words:
+          - "text/plain"
+          - "ICEFLOW"
+        part: header
+        condition: and
