--- a/exposures/files/iceflow-vpn-disclosure.yaml
+++ b/exposures/files/iceflow-vpn-disclosure.yaml
@@ -3,7 +3,7 @@ id: iceflow-vpn-disclosure
 info:
   name: ICEFlow VPN Disclosure
   author: pikpikcu
-  severity: info
+  severity: medium
   tags: exposure,files,iceflow
 
 requests:
@@ -20,8 +20,8 @@ requests:
 
     matchers-condition: and
     matchers:
-      - type: binary
-        binary:
+      - type: word
+        words:
           - 'ICEFLOW VPN:'
           - 'ICEFLOW SYSTEM'
           - 'ICEFLOW'
