--- a/exposures/files/crossdomin-xml.yaml
+++ b/exposures/files/crossdomin-xml.yaml
@@ -2,10 +2,10 @@ id: insecure-crossdomain
 
 info:
   name: Insecure cross-domain.xml file
-  author: Borna Nematzadeh
+  author: Borna Nematzadeh,nadino
   severity: info
   reference: https://www.acunetix.com/vulnerabilities/web/insecure-crossdomain-xml-file
-  tags: exposure
+  tags: exposure,generic
 
 requests:
   - method: GET
