--- a/vulnerabilities/other/netis-info-leak.yaml
+++ b/vulnerabilities/other/netis-info-leak.yaml
@@ -26,3 +26,9 @@ requests:
           - "rp_ap_ssid"
         part: body
         condition: and
+
+    extractors:
+      - type: regex
+        part: body
+        regex:
+          - "'rp_soon_password':'([A-Za-z0-9]+)'"
