--- a/vulnerabilities/other/netis-info-leak.yaml
+++ b/vulnerabilities/other/netis-info-leak.yaml
@@ -3,7 +3,7 @@ id: netis-info-leak
 info:
   name: Netis E1+ V1.2.32533 - Unauthenticated WiFi Password Leak
   author: gy741
-  severity: low
+  severity: medium
   reference: https://www.exploit-db.com/exploits/48384
   tags: netis,exposure
 
