--- a/exposures/files/iceflow-vpn-disclosure.yaml
+++ b/exposures/files/iceflow-vpn-disclosure.yaml
@@ -4,7 +4,7 @@ info:
   name: ICEFlow VPN Disclosure
   author: pikpikcu
   severity: medium
-  tags: exposure,files,iceflow
+  tags: exposure,files,iceflow,logs
 
 requests:
   - method: GET
@@ -18,6 +18,7 @@ requests:
       - "{{BaseURL}}/log/mobile.log"
       - "{{BaseURL}}/log/firewall.log"
 
+    max-size: 2048
     matchers-condition: and
     matchers:
       - type: word
