--- a/exposed-panels/bazarr-login.yaml
+++ b/exposed-panels/bazarr-login.yaml
@@ -8,31 +8,11 @@ info:
   tags: panel,bazarr,login
 
 requests:
-  - raw:
-      - |
-        GET /system/status HTTP/1.1
-        Host: {{BaseURL}}
-        Connection: keep-alive
-        Cache-Control: max-age=0
-        Upgrade-Insecure-Requests: 1
-        User-Agent: Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/90.0.4430.212 Safari/537.36
-        Accept: text/html,application/xhtml+xml,application/xml;q=0.9,image/avif,image/webp,im
+  - method: GET
+    path:
+      - "{{BaseURL}}/login"
 
-      - |
-        GET /login HTTP/1.1
-        Host: {{BaseURL}}
-        Connection: keep-alive
-        Cache-Control: max-age=0
-        Upgrade-Insecure-Requests: 1
-        User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/92.0.4515.131 Safari/537.36
-        Accept: text/html,application/xhtml+xml,application/xml;q=0.9,image/avif,image/webp,image/apng,*/*;q=0.8,application/signed-exchange;v=b3;q=0.9
-        Sec-GPC: 1
-        Accept-Encoding: gzip, deflate
-        Accept-Language: en-US,en;q=0.9
-
-    matchers-condition: and
     matchers:
       - type: word
         words:
           - '<title>Bazarr</title>'
-          - 'Bazarr is a companion application to Sonarr and Radarr'
