--- a/exposures/files/iceflow-vpn-disclosure.yaml
+++ b/exposures/files/iceflow-vpn-disclosure.yaml
@@ -3,7 +3,7 @@ id: iceflow-vpn-disclosure
 info:
   name: ICEFlow VPN Disclosure
   author: pikpikcu
-  severity: medium
+  severity: low
   tags: exposure,files,iceflow,logs
 
 requests:
