--- a/vulnerabilities/simplecrm/simple-crm-sql-injection.yaml
+++ b/vulnerabilities/simplecrm/simple-crm-sql-injection.yaml
@@ -2,10 +2,10 @@ id: simple-crm-sql-injection
 
 info:
   name: Simple CRM 3.0 - 'email' SQL injection & Authentication Bypass
-  reference: https://packetstormsecurity.com/files/163254/simplecrm30-sql.txt
   author: geeknik
   severity: critical
-  tags: sqli,bypass,simplecrm
+  reference: https://packetstormsecurity.com/files/163254/simplecrm30-sql.txt
+  tags: sqli,simplecrm,auth-bypass
 
 requests:
   - method: POST
