--- a/network/cisco-smi-detect.yaml
+++ b/network/cisco-smi-detect.yaml
@@ -4,17 +4,17 @@ info:
   name: Cisco Smart Install Endpoints Detect
   author: dwisiswant0
   severity: info
+  description: |
+    This template attempts to connect to the specified Cisco Smart Install port
+    and determines if it speaks the Smart Install Protocol. Exposure of SMI
+    to untrusted networks can allow complete compromise of the switch.
   references: |
     - https://blog.talosintelligence.com/2017/02/cisco-coverage-for-smart-install-client.html
     - https://blogs.cisco.com/security/cisco-psirt-mitigating-and-detecting-potential-abuse-of-cisco-smart-install-feature
     - https://tools.cisco.com/security/center/content/CiscoSecurityResponse/cisco-sr-20170214-smi
     - https://github.com/Cisco-Talos/smi_check/blob/master/smi_check.py#L52-L53
     - https://github.com/Sab0tag3d/SIET
-  description: |
-    This template attempts to connect to the specified Cisco Smart Install port
-    and determines if it speaks the Smart Install Protocol. Exposure of SMI
-    to untrusted networks can allow complete compromise of the switch.
-  tags: network,cisco,smi,endpoint,exposure
+  tags: network,cisco,smi,exposure
 
 network:
   - inputs:
