--- a/vulnerabilities/other/eyelock-nano-lfd.yaml
+++ b/vulnerabilities/other/eyelock-nano-lfd.yaml
@@ -2,11 +2,11 @@ id: eyelock-nano-lfd
 
 info:
   name: EyeLock nano NXT 3.5 - Local File Disclosure
-  description:
   author: geeknik
-  reference: https://www.zeroscience.mk/codes/eyelock_lfd.txt
   severity: high
-  tags: eyelock,lfd,traversal,iot,biometrics
+  description: nano NXT suffers from a file disclosure vulnerability when input passed thru the 'path' parameter to 'logdownload.php' script is not properly verified before being used to read files. This can be exploited to disclose contents of files from local resources.
+  reference: https://www.zeroscience.mk/codes/eyelock_lfd.txt
+  tags: iot,lfi,eyelock
 
 requests:
   - method: GET
