--- a/vulnerabilities/other/pmb-directory-traversal.yaml
+++ b/vulnerabilities/other/pmb-directory-traversal.yaml
@@ -2,9 +2,12 @@ id: pmb-directory-traversal
 
 info:
   name: PMB 5.6 Directory Traversal
-  reference: https://packetstormsecurity.com/files/160072/PMB-5.6-Local-File-Disclosure-Directory-Traversal.html
   author: geeknik
   severity: medium
+  description: The PMB Gif Image is not sanitizing the 'chemin', which leads to Local File Disclosure.
+  reference: https://packetstormsecurity.com/files/160072/PMB-5.6-Local-File-Disclosure-Directory-Traversal.html
+  tags: lfi
+
 
 requests:
   - method: GET
@@ -17,6 +20,7 @@ requests:
       - type: regex
         regex:
           - "root:[x*]:0:0:"
+
       - type: status
         status:
           - 200
