--- a/network/cisco-smi-exposure.yaml
+++ b/network/cisco-smi-exposure.yaml
@@ -1,13 +1,14 @@
-id: cisco-smi-detect
+id: cisco-smi-exposure
 
 info:
-  name: Cisco Smart Install Endpoints Detect
+  name: Cisco Smart Install Endpoints Exposure
   author: dwisiswant0
   severity: info
   description: |
-    This template attempts to connect to the specified Cisco Smart Install port
-    and determines if it speaks the Smart Install Protocol. Exposure of SMI
-    to untrusted networks can allow complete compromise of the switch.
+    This template attempts & supports the detection part only by
+    connecting to the specified Cisco Smart Install port and determines
+    if it speaks the Smart Install Protocol. Exposure of SMI to
+    untrusted networks can allow complete compromise of the switch.
   references: |
     - https://blog.talosintelligence.com/2017/02/cisco-coverage-for-smart-install-client.html
     - https://blogs.cisco.com/security/cisco-psirt-mitigating-and-detecting-potential-abuse-of-cisco-smart-install-feature
