--- a/takeovers/announcekit-takeover.yaml
+++ b/takeovers/announcekit-takeover.yaml
@@ -4,14 +4,16 @@ info:
   name: Announcekit Takeover Detection
   author: melbadry9
   severity: high
-  tags: takeover,aws
-  reference: https://announcekit.app/docs/custom-host
+  tags: takeover
+  reference: |
+    - https://blog.melbadry9.xyz/dangling-dns/xyz-services/dangling-dns-announcekit
+    - https://github.com/EdOverflow/can-i-take-over-xyz/issues/228
 
 requests:
   - method: GET
     raw:
       - |
-        GET / HTTP/2
+        GET / HTTP/1.1
         Accept: text/html,application/xhtml+xml,application/xml;q=0.9,image/webp,*/*;q=0.8
 
     redirects: true
