--- a/takeovers/announcekit-takeover.yaml
+++ b/takeovers/announcekit-takeover.yaml
@@ -1,10 +1,10 @@
-id: announcekit-tk
+id: announcekit-takeover
 
 info:
   name: Announcekit Takeover Detection
   author: melbadry9
   severity: high
-  tags: takeover
+  tags: takeover,announcekit
   reference: |
     - https://blog.melbadry9.xyz/dangling-dns/xyz-services/dangling-dns-announcekit
     - https://github.com/EdOverflow/can-i-take-over-xyz/issues/228
@@ -14,6 +14,7 @@ requests:
     raw:
       - |
         GET / HTTP/1.1
+        Host: {{Hostname}}
         Accept: text/html,application/xhtml+xml,application/xml;q=0.9,image/webp,*/*;q=0.8
 
     redirects: true
