--- a/vulnerabilities/other/twig-php-ssti.yaml
+++ b/vulnerabilities/other/twig-php-ssti.yaml
@@ -10,8 +10,14 @@ requests:
   - method: GET
     path:
       - "{{BaseURL}}/search?search_key={{1337*1338}}"
+
+    matchers-condition: and
     matchers:
       - type: word
         words:
           - "1788906"
         part: body
+      - type: status
+        status:
+          - 404
+        negative: true
