--- a/vulnerabilities/other/twig-php-ssti.yaml
+++ b/vulnerabilities/other/twig-php-ssti.yaml
@@ -9,7 +9,7 @@ info:
 requests:
   - method: GET
     path:
-      - "{{BaseURL}}/search?search_key={{1337*1338}}"
+      - "{{BaseURL}}/search?search_key=%7B%7B1337*1338%7D%7D"
 
     matchers-condition: and
     matchers:
