--- a/vulnerabilities/other/ms-exchange-server-reflected-xss.yaml
+++ b/vulnerabilities/other/ms-exchange-server-reflected-xss.yaml
@@ -3,7 +3,7 @@ id: ms-exchange-server-reflected-xss
 info:
   name: MS Exchange Server XSS
   author: infosecsanyam
-  severity: high
+  severity: medium
   reference: |
         - https://www.shodan.io/search?query=http.title%3A%22Outlook%22
         - https://blog.orange.tw/2021/08/proxyoracle-a-new-attack-surface-on-ms-exchange-part-2.html
