--- a/vulnerabilities/other/ms-exchange-server-reflected-xss.yaml
+++ b/vulnerabilities/other/ms-exchange-server-reflected-xss.yaml
@@ -18,8 +18,8 @@ requests:
     matchers:
       - type: word
         words:
-          - 'alert(document.domain)//'
-          - 'Microsoft Corporation'
+          - 'alert(document.domain)//&et=ServerError'
+          - 'mail/bootr.ashx'
         condition: and
 
       - type: status
