--- a/vulnerabilities/other/geovision-geowebserver-lfi.yaml
+++ b/vulnerabilities/other/geovision-geowebserver-lfi.yaml
@@ -16,9 +16,12 @@ requests:
     matchers-condition: and
     matchers:
 
-      - type: regex
-        regex:
-          - "\\[(font|extension|file)s\\]"
+      - type: word
+        words:
+          - "bit app support"
+          - "fonts"
+          - "extensions"
+        condition: and
         part: body
 
       - type: status
