--- a/vulnerabilities/other/netgear-router-disclosure.yaml
+++ b/vulnerabilities/other/netgear-router-disclosure.yaml
@@ -20,13 +20,22 @@ requests:
       - type: status
         status:
           - 200
+          - 501
+
       - type: word
         words:
           - "<serialNumber>"
-          - "</serialNumber>"
+          - "<deviceType>"
+          - "<modelNumber>"
         condition: and
+
+      - type: word
+        part: header
+        words:
+          - text/xml
+
     extractors:
       - type: regex
-        name: serial_number
+        group: 1
         regex:
-          - ">(.*)<"
+          - "<serialNumber>([A-Z0-9]+)<\\/serialNumber>"
