Rename "references" to "reference" to match the expected template info structure
Related nuclei tickets:
* #259 - dynamic key-value field support for template information
* #940 - new infos in template
* #834
* RES-84

--- a/vulnerabilities/other/mcafee-epo-rce.yaml
+++ b/vulnerabilities/other/mcafee-epo-rce.yaml
@@ -12,7 +12,7 @@ info:
     making it possible to upload arbitrary files
     to arbitrary directories or overwrite existing ones during archive extraction.
 
-    References:
+    reference:
     - https://swarm.ptsecurity.com/vulnerabilities-in-mcafee-epolicy-orchestrator/
   tags: mcafee,rce
 
