--- a/technologies/mautic-crm-detect.yaml
+++ b/technologies/mautic-crm-detect.yaml
@@ -6,7 +6,7 @@ info:
   severity: info
   description: Detects Mautic CRM
   tags: tech,mautic,crm
-  references:
+  reference:
     - https://github.com/mautic/mautic
 
 requests:
