--- a/vulnerabilities/wordpress/wordpress-wpcourses-info-disclosure.yaml
+++ b/vulnerabilities/wordpress/wordpress-wpcourses-info-disclosure.yaml
@@ -6,7 +6,7 @@ info:
   severity: high
   description: Critical Information Disclosure on WP Courses plugin < 2.0.29 exposes private course videos and materials
   tags: wordpress,plugin
-  references: |
+  reference: |
       - https://www.exploit-db.com/exploits/48910
       - https://www.redtimmy.com/critical-information-disclosure-on-wp-courses-plugin-exposes-private-course-videos-and-materials/
 
