--- a/exposures/configs/dbeaver-credentials.yaml
+++ b/exposures/configs/dbeaver-credentials.yaml
@@ -4,13 +4,16 @@ info:
   name: DBeaver Credential Exposure
   author: geeknik
   severity: info
+  tags: exposure,dbeaver
+
+# to decode the above file, run this:
+# openssl aes-128-cbc -d -K "babb4a9f774ab853c96c2d653dfe544a" -iv 00000000000000000000000000000000 -in credentials-config.json | dd bs=1 skip=16 2>/dev/null
+
 
 requests:
   - method: GET
     path:
       - "{{BaseURL}}/.dbeaver/credentials-config.json"
-    # to decode the above file, run this:
-    # openssl aes-128-cbc -d -K "babb4a9f774ab853c96c2d653dfe544a" -iv 00000000000000000000000000000000 -in credentials-config.json | dd bs=1 skip=16 2>/dev/null
 
     matchers-condition: and
     matchers:
@@ -21,6 +24,3 @@ requests:
         words:
           - "application/octet-stream"
         part: header
-      - type: dsl
-        dsl:
-          - "len(body) >=200 && len(body) <400"
