--- a/exposures/tokens/docker/dockercfg.yaml
+++ b/exposures/tokens/docker/dockercfg.yaml
@@ -3,9 +3,9 @@ id: dockercfg
 info:
   name: Detect .dockercfg
   author: geeknik
-  description: Docker registry authentication data
   severity: high
-  tags: docker,auth
+  description: Docker registry authentication data
+  tags: docker,exposure
 
 requests:
   - method: GET
@@ -18,12 +18,13 @@ requests:
         part: header
         words:
           - "text/plain"
+
       - type: word
         words:
-          - "https"
-          - "email"
-          - "auth"
+          - '"email":'
+          - '"auth":'
         condition: and
+
       - type: status
         status:
           - 200
