--- a/exposures/configs/qdpm-info-leak.yaml
+++ b/exposures/configs/qdpm-info-leak.yaml
@@ -6,7 +6,7 @@ info:
   name: qdPM 9.2 - DB Connection String and Password Exposure (Unauthenticated)
   severity: high
   tags: qdpm,exposure
-  reference: |
+  reference:
       - https://www.exploit-db.com/exploits/50176
 
 requests:
