--- a/misconfiguration/akamai-arl-xss.yaml
+++ b/misconfiguration/akamai-arl-xss.yaml
@@ -5,7 +5,7 @@ info:
   author: pdteam
   severity: medium
   tags: akamai,xss
-  reference: |
+  reference:
       - https://github.com/war-and-code/akamai-arl-hack
       - https://twitter.com/SpiderSec/status/1421176297548435459
       - https://warandcode.com/post/akamai-arl-hack/
