--- a/misconfiguration/zabbix-dashboards-access.yaml
+++ b/misconfiguration/zabbix-dashboards-access.yaml
@@ -5,7 +5,7 @@ info:
   author: pussycat0x,vsh00t
   severity: medium
   description: View dashboard with guest login.
-  reference: |
+  reference:
         - https://www.exploit-db.com/ghdb/5595
         - https://packetstormsecurity.com/files/163657/zabbix5x-sqlxss.txt
   tags: zabbix,unauth
