--- a/takeovers/announcekit-takeover.yaml
+++ b/takeovers/announcekit-takeover.yaml
@@ -5,7 +5,7 @@ info:
   author: melbadry9
   severity: high
   tags: takeover,announcekit
-  reference: |
+  reference:
     - https://blog.melbadry9.xyz/dangling-dns/xyz-services/dangling-dns-announcekit
     - https://github.com/EdOverflow/can-i-take-over-xyz/issues/228
 
