--- a/vulnerabilities/wordpress/wp-woocommerce-pdf-invoice-listing.yaml
+++ b/vulnerabilities/wordpress/wp-woocommerce-pdf-invoice-listing.yaml
@@ -5,7 +5,7 @@ info:
   author: mohammedsaneem,sec_hawk
   severity: medium
   description: Allows attacker to view sensitive information such as company invoices
-  reference: |
+  reference:
       - https://twitter.com/sec_hawk/status/1426984595094913025?s=21
       - https://github.com/Mohammedsaneem/wordpress-upload-information-disclosure/blob/main/worpress-upload.yaml
       - https://woocommerce.com/products/pdf-invoices/
